--- a/test_apps/keyboardfocus/index.html
+++ b/test_apps/keyboardfocus/index.html
@@ -68,7 +68,14 @@
     </p>
     <iframe style="overflow: scroll; height: 300px; width: 54%; float: left;" src="/frame1.html"></iframe>
   </div>
+
+  <select>
+    <option>one</option>
+    <option>two</option>
+    <option>three</option>
+    <option>four</option>
+  </select>
 </ul>
-  <script src="js/focus.js" type="text/javascript" charset="utf-8"></script>
+  <script src="js/focus.js" type="text/javascript;version=1.8" charset="utf-8"></script>
 </body>
 </html>
