--- a/apps/communications/contacts/index.html
+++ b/apps/communications/contacts/index.html
@@ -54,6 +54,7 @@
 
     <script defer type="text/javascript" src="/contacts/js/utilities/image_loader.js"></script>
 
+    <script defer type="text/javascript" src="/contacts/js/focus.js"></script>
     <script defer type="text/javascript" src="/contacts/js/navigation.js"></script>
     <script defer type="text/javascript" src="/contacts/js/contacts_list.js"></script>
     <script defer type="text/javascript" src="/contacts/js/search.js"></script>
